--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <form id="login-form">
+    <form id="login-form" class="hidden">
       <input required type="text" maxlength="15" placeholder="What is your name?" />
       <input type="submit" value="Login" />
     </form>
