--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   </head>
 
   <body>
-    <form id="login-form" class="hidden">
-      <input required type="text" maxlength="15" placeholder="What is your name?" />
-      <input type="submit" value="Login" />
-    </form>
+    <div>
+      <form id="login-form" class="hidden">
+        <input required type="text" maxlength="15" placeholder="What is your name?" />
+        <input type="submit" value="Login" />
+      </form>
 
-    <h1 id="greeting" class="hidden"></h1>
+      <h1 id="greeting" class="hidden">Hello</h1>
+      <h2 id="calendar">01월 01일</h2>
+      <h2 id="clock">00:00:00</h2>
+      
+    </div>
 
     <script src="app.js"></script>
   </body>
