--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       
     </div>
 
-    <script src="app.js"></script>
+    <script src="./js/clock.js"></script>
+    <script src="./js/greeting.js"></script>
   </body>
 </html>
