--- a/index.html
+++ b/index.html
@@ -19,9 +19,25 @@
       <h2 id="calendar">01월 01일</h2>
       <h2 id="clock">00:00:00</h2>
       
+      <div class="todo-container">
+        <form id="todo-form">
+          <input type="text" required placeholder="What to do?"/>
+          <input type="submit" value="입력">
+        </form>
+
+        <ul id="todo-list">
+
+        </ul>
+
+
+      </div>
+
+
+
     </div>
 
     <script src="./js/clock.js"></script>
     <script src="./js/greeting.js"></script>
+    <script src="./js/todo.js"></script>
   </body>
 </html>
