Add background.js and back images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./static/style.css" />
     <title>Momentum</title>
   </head>
 
@@ -24,13 +24,16 @@
           <input type="text" required placeholder="What to do?"/>
           <input type="submit" value="입력">
         </form>
-
         <ul id="todo-list">
-
         </ul>
-
-
       </div>
+
+      <div id="quote">
+        <span class="quote_text"></span>
+        <span class="author"></span>
+      </div>
+
+
 
 
 
@@ -39,5 +42,7 @@
     <script src="./js/clock.js"></script>
     <script src="./js/greeting.js"></script>
     <script src="./js/todo.js"></script>
+    <script src="./js/quote.js"></script>
+    <script src="./js/background.js"></script>
   </body>
 </html>
